--- a/content/images/mobile/responsive/mediaqueries.html
+++ b/content/images/mobile/responsive/mediaqueries.html
@@ -125,8 +125,7 @@
       }
       function addBrownianMotion(t) {}
       let targets = [
-        document.getElementById("small_target")
-        // ,document.getElementById("big_target")
+        document.getElementById("small_target"),document.getElementById("big_target")
       ];
 
       for (t of targets) {
