--- a/content/images/responsive-images/dex.html
+++ b/content/images/responsive-images/dex.html
@@ -5,7 +5,7 @@
     <title>Demo Seite für Responsive Images</title>
     <style>
       img {
-         width: 350px;
+        width: 350px;
         height: 350px;
         margin: 10px;
       }
@@ -20,10 +20,10 @@
   <body>
     <h1>Bild in vier Versionen</h1>
     <ul>
-      <li>japanischer-garten_1.jpg 350x350 Auflösung</li>
-      <li>japanischer-garten_2x.jpg 701x701 Auflösung</li>
-      <li>japanischer-garten_3x.jpg 1401x1401 Auflösung</li>
-      <li>japanischer-garten_4x.jpg 2802x2802 Auflösung</li>
+      <li>japanischer-garten_350px.jpg 350x350 Auflösung</li>
+      <li>japanischer-garten_701px.jpg 701x701 Auflösung</li>
+      <li>japanischer-garten_1401px.jpg 1401x1401 Auflösung</li>
+      <li>japanischer-garten_2802px.jpg 2802x2802 Auflösung</li>
     </ul>
 
     <p>Zielgröße: 350x350 Pixel.</p>
@@ -62,9 +62,9 @@
 
       <img
         class="x4"
-        src="japanischer-garten_1x.jpg"
+        src="japanischer-garten_350px.jpg"
         srcset="
-          japanischer-garten_1x.jpg 1x,
+            japanischer-garten_350px.jpg 350w,
           japanischer-garten_2x.jpg 2x,
           japanischer-garten_3x.jpg 3x,
           japanischer-garten_4x.jpg 4x
