--- a/content/images/ajax-good/3.html
+++ b/content/images/ajax-good/3.html
@@ -42,16 +42,11 @@
     </ul>
   </nav>
   <main>
-<p><b>Ajax</b> 
-  [<span title="Aussprache im Internationalen Phonetischen Alphabet (IPA)">ˈeidʒæks</span>] 
-  (auch <b>AJAX</b>; Akronym von englisch 
-  <i><span lang="en"><u>A</u>synchronous <u>J</u>avaScript <u>a</u>nd <u>X</u>ML</span></i>) 
-  bezeichnet ein Konzept der asynchronen Datenübertragung zwischen einem 
-  Browser und dem Server. 
-  Dieses ermöglicht es, HTTP-Anfragen durchzuführen, 
-  während eine HTML-Seite angezeigt wird, und die Seite zu verändern, 
-  ohne sie komplett neu zu laden.
-</p>
+<span >The <code>Event</code> 
+  interface's <strong><code>preventDefault()</code></strong> 
+  method tells the user agent that 
+  if the event does not get explicitly handled, its default action 
+  should not be taken as it normally would be.</span>
   </main>
   <footer>
   </footer>
