--- a/content/images/ajax-good/5.html
+++ b/content/images/ajax-good/5.html
@@ -42,16 +42,15 @@
     </ul>
   </nav>
   <main>
-<p><b>Ajax</b> 
-  [<span title="Aussprache im Internationalen Phonetischen Alphabet (IPA)">ˈeidʒæks</span>] 
-  (auch <b>AJAX</b>; Akronym von englisch 
-  <i><span lang="en"><u>A</u>synchronous <u>J</u>avaScript <u>a</u>nd <u>X</u>ML</span></i>) 
-  bezeichnet ein Konzept der asynchronen Datenübertragung zwischen einem 
-  Browser und dem Server. 
-  Dieses ermöglicht es, HTTP-Anfragen durchzuführen, 
-  während eine HTML-Seite angezeigt wird, und die Seite zu verändern, 
-  ohne sie komplett neu zu laden.
+<p>Learn about REST</p>
+
+
+<p>
+  Fielding, R. T., & Taylor, R. N. (2002). Principled design of the modern Web architecture. 
+  ACM Transactions on Internet Technology, 2(2), 115–150. https://doi.org/10.1145/514183.514185
 </p>
+
+<p>Massé, M. (2012). REST-API-Design.  O’Reilly Media, Inc.</p>
   </main>
   <footer>
   </footer>
