--- a/content/images/ajax-good/4.html
+++ b/content/images/ajax-good/4.html
@@ -42,16 +42,7 @@
     </ul>
   </nav>
   <main>
-<p><b>Ajax</b> 
-  [<span title="Aussprache im Internationalen Phonetischen Alphabet (IPA)">ˈeidʒæks</span>] 
-  (auch <b>AJAX</b>; Akronym von englisch 
-  <i><span lang="en"><u>A</u>synchronous <u>J</u>avaScript <u>a</u>nd <u>X</u>ML</span></i>) 
-  bezeichnet ein Konzept der asynchronen Datenübertragung zwischen einem 
-  Browser und dem Server. 
-  Dieses ermöglicht es, HTTP-Anfragen durchzuführen, 
-  während eine HTML-Seite angezeigt wird, und die Seite zu verändern, 
-  ohne sie komplett neu zu laden.
-</p>
+<img src="eventual_consistency.png" title="Later I&#39;m going to get a head start on the heat bath." alt="Eventual Consistency" srcset="eventual_consistency_2x.png 2x">
   </main>
   <footer>
   </footer>
