--- a/content/images/css-masse.html
+++ b/content/images/css-masse.html
@@ -11,7 +11,7 @@
     <h1>Maßeinheiten in CSS</h1>
 
     <div style="width: 300px;">300px</div>
-    <div style="width: 15em;">15em<br>MMMMMMMMMMMMMMM</div>
+    <div style="width: 15em;">15em</div>
     <div style="width: 75vw">75vw</div>
   </body>
 </html>
