link to original japanisher-garten.jpg

--- a/content/images/responsive-images/dex.html
+++ b/content/images/responsive-images/dex.html
@@ -26,8 +26,9 @@
   </head>
 
   <body>
-    <h1>Bild in sechs Versionen</h1>
+    <h1>Original-Bild und sechs Versionen</h1>
     <ul>
+      <li>Original: <a href="japanischer-garten.jpg">japanischer-graten.jpg</a> mit 6000x4000</li>
       <li>japanischer-garten_350px.webp 350x233 Auflösung</li>
       <li>japanischer-garten_701px.webp 701x467 Auflösung</li>
       <li>japanischer-garten_1401px.webp 1401x934 Auflösung</li>
