--- a/content/images/applied-js-and-css/event-local-storage.html
+++ b/content/images/applied-js-and-css/event-local-storage.html
@@ -22,7 +22,7 @@
         |
         <a href="local-storage.html">localStorage</a>
         |
-        <a href="local-storage-event.html">mit Event</a>
+        <a href="event-local-storage.html">mit Event</a>
       </nav>
       <h1>Lebenszeit von Variablen</h1>
       <p>
@@ -33,7 +33,7 @@
       </p>
 
       <p>
-        Öffne  <a href="local-storage.html" target="_blank">diese Seite noch einmal</a>
+        Öffne  <a href="event-local-storage.html" target="_blank">diese Seite noch einmal</a>
       </p>
 
       <h2>Diese Seite</h2>
