--- a/content/images/applied-js-and-css/local-storage.html
+++ b/content/images/applied-js-and-css/local-storage.html
@@ -23,7 +23,7 @@
         |
         <a href="local-storage.html">localStorage</a>
         |
-        <a href="local-storage-event.html">mit Event</a>
+        <a href="event-local-storage.html">mit Event</a>
       </nav>
 
       <h1>Lebenszeit von Variablen</h1>
