update demo localstorage

--- a/content/images/applied-js-and-css/local-storage.html
+++ b/content/images/applied-js-and-css/local-storage.html
@@ -99,7 +99,7 @@
       };
 
 
-      document.getElementById('intro').innerText = `Seite geladen um ${dayAndTime}. Variable a und LocalStorage key "a" mit 0 initialisiert.`;
+      document.getElementById('intro').innerText = `Seite geladen um ${dayAndTime} und neue Hintergrundfarbe gesetzt.  Variable a und LocalStorage key "a" mit 0 initialisiert.`;
       show(a);
       showLocalStorage(localStorage.getItem('a'));
 
