--- a/content/images/css/selectors/vis.html
+++ b/content/images/css/selectors/vis.html
@@ -48,6 +48,7 @@
   &lt;h1&gt;Überschrift&lt;/h1&gt;
   &lt;section class=&quot;intro&quot;&gt;
     &lt;h2&gt;Dies und Das&lt;/h2&gt;
+    &lt;p&gt;Viele Wort in einem Absatz werden dann irgendwann umgebrochen so dass mehrere Zeilen entstehen.&lt;/p&gt;
     &lt;ol&gt;
       &lt;li&gt;&lt;a href=&quot;#bla&quot;&gt;erster Link&lt;/a&gt;&lt;/li&gt;
       &lt;li&gt;&lt;a href=&quot;#blu&quot;&gt;zweiter link&lt;/a&gt;&lt;/li&gt;
@@ -55,9 +56,6 @@
   &lt;/section&gt;
 &lt;/body&gt;</textarea></div>
 
-      <h2>Specificity</h2>
-      <div class="specificity"><span class="type-a">0</span><span
-          class="type-b">0</span><span class="type-c">0</span></div>
         <h2>Page</h2>
         <iframe></iframe>
     </section>
